--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -88,6 +88,7 @@
     "sign-out": "Sign out",
     "sign-up": "Sign up",
     "statistics": "Statistics",
+    "subscribe": "Subscribe",
     "tags": "Tags",
     "title": "Title",
     "tree-mode": "Tree mode",
