--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -239,6 +239,9 @@
     "back-to-top": "Back to Top",
     "go-to-home": "Go to Home"
   },
+  "search":{
+    "user-placeholder":"Search groups..."
+  },
   "setting": {
     "access-token-section": {
       "access-token-copied-to-clipboard": "Access token copied to clipboard",
