Can now list public users in explore page

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -240,7 +240,7 @@
     "go-to-home": "Go to Home"
   },
   "search":{
-    "user-placeholder":"Search groups..."
+    "user-placeholder":"Search users..."
   },
   "setting": {
     "access-token-section": {
