--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -136,8 +136,8 @@
     "archived-at": "Archived at",
     "ai":{
       "generate-memo-summary":"Generate memo summary",
-      "generate-memo": "Generate memo"
-
+      "generate-memo": "Generate memo",
+      "memo-summary":"Memo summary"
     },
     "click-to-hide-nsfw-content": "Click to hide NSFW content",
     "click-to-show-nsfw-content": "Click to show NSFW content",
