updated Memo Dialog to support multiple dialog types

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -71,6 +71,7 @@
     "referencing": "Referencing",
     "relations": "Relations",
     "remember-me": "Remember me",
+    "remove":"Remove",
     "rename": "Rename",
     "reset": "Reset",
     "resources": "Resources",
