--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -53,6 +53,7 @@
     "preview": "Vista previa",
     "profile": "Perfil",
     "remember-me": "Recuérdame",
+    "remove":"Remove",
     "rename": "Renombrar",
     "reset": "Restablecer",
     "resources": "Recursos",
