feat: updated revoke session to display in-app confirmation dialog

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -73,6 +73,7 @@
     "remember-me": "Remember me",
     "remove":"Remove",
     "rename": "Rename",
+    "revoke": "Revoke",
     "reset": "Reset",
     "resources": "Resources",
     "restore": "Restore",
