feat: added email verification during account creation

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -12,7 +12,24 @@
     "new-password": "New password",
     "repeat-new-password": "Repeat the new password",
     "sign-in-tip": "Already have an account?",
-    "sign-up-tip": "Don't have an account yet?"
+    "sign-up-tip": "Don't have an account yet?",
+    "email-required":"Email required",
+    "invalid-email":"Invalid email",
+    "otp-sent":"OTP Sent",
+    "email-verification-failed":"Email verification failed",
+    "otp-required":"OTP required",
+    "verification-expired":"Verification expired",
+    "email-mismatch":"Email mismatch",
+    "email-verified":"Email verified",
+    "invalid-otp":"Invalid OTP",
+    "username-required":"Username required",
+    "password-required":"Password required",
+    "password-too-short":"Password too short",
+    "email-not-verified":"Email not verified",
+    "signup-success":"Signup success",
+    "signup-failed":"Signup failed",
+    "resend-otp":"Resend OTP",
+    "signup-disabled":"Signup disabled"
   },
   "common": {
     "about": "About",
@@ -61,6 +78,7 @@
     "nickname": "Nickname",
     "null": "Null",
     "or": "or",
+    "otp":"One Time Pin",
     "password": "Password",
     "pin": "Pin",
     "pinned": "Pinned",
@@ -81,6 +99,7 @@
     "save": "Save",
     "search": "Search",
     "select": "Select",
+    "send-otp":"Send OTP",
     "settings": "Settings",
     "share": "Share",
     "shortcut-filter": "Shortcut filter",
@@ -101,6 +120,7 @@
     "user": "User",
     "username": "Username",
     "version": "Version",
+    "verify": "Verify",
     "visibility": "Visibility",
     "yourself": "Yourself"
   },
