feat: added support for both email or username sign in

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -119,6 +119,7 @@
     "upload": "Upload",
     "user": "User",
     "username": "Username",
+    "username-or-email":"Username or Email",
     "version": "Version",
     "verify": "Verify",
     "visibility": "Visibility",
