feat: added enable email verification control to Host

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -460,6 +460,7 @@
       "disallow-change-username": "Disallow changing username",
       "disallow-password-auth": "Disallow password auth",
       "disallow-user-registration": "Disallow user registration",
+      "enable-email-verification":"Enable email verification",
       "monday": "Monday",
       "saturday": "Saturday",
       "sunday": "Sunday",
