feat: add an option to auto expand subtags in tree mode (#4994)

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -45,6 +45,7 @@
     "archive": "Archive",
     "archived": "Archived",
     "attachments": "Attachments",
+    "auto-expand": "Auto expand",
     "avatar": "Avatar",
     "basic": "Basic",
     "beta": "Beta",
